fix overflow-х

--- a/src/feature/Footer/Footer.module.css
+++ b/src/feature/Footer/Footer.module.css
@@ -4,9 +4,10 @@
     justify-content: center;
 
     width: 100vw;
+    max-width: 100%;
     height: 5vh;
 
-    font-family: Montserrat;
+    font-family: Montserrat, serif;
     font-size: 14px;
     color: white;
 
