--- a/src/feature/Header/Header.module.css
+++ b/src/feature/Header/Header.module.css
@@ -1,5 +1,5 @@
 .componentContainer {
-    width: 100vw;
+    /*width: 100vw;*/
     min-height: 100vh;
 
     background-color: #ffffff;
@@ -11,6 +11,7 @@
     justify-content: space-evenly;
 
     width: 100vw;
+    max-width: 100%;
     height: 5vh;
 
     font-family: Montserrat, serif;
