--- a/src/main/ui/App.module.css
+++ b/src/main/ui/App.module.css
@@ -1,5 +1,6 @@
 .appWrapper {
     width: 100vw;
+    max-width: 100%;
     min-height: 100vh;
 
     background-color: #ffffff;
